# autorefine

./: .audit-blocklist.example  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEFERRED.md  LICENSE  QUICKSTART.md  README.md  calibrate.py  dashboard.py  evaluate.py  program.md  pyproject.toml  rubric.yaml  start.sh
.github/workflows/: ci.yml
artifacts/: example.md
scripts/: audit.sh  diff.sh  init.sh  install-hooks.sh
skill/: SKILL.md
skill/references/: iteration-subagent-prompt.md  supervisor-prompt.md
skill/scripts/: check-setup.sh
templates/claude-skill/: program.md  rubric.yaml
templates/claude-skill/artifacts/: example-skill.md
templates/llm-skill/: program.md  rubric.yaml
templates/llm-skill/artifacts/: example-system-prompt.md
templates/mcp-tools/: program.md  rubric.yaml
templates/mcp-tools/artifacts/: example-mcp-tool.md
templates/product-doc/: program.md  rubric.yaml
templates/product-doc/artifacts/: example-product-page.md
templates/project-rules/: program.md  rubric.yaml
templates/project-rules/artifacts/: example-claude-md.md
templates/research-notes/: program.md  rubric.yaml
templates/research-notes/artifacts/: example-research-notes.md
templates/technical-paper/: program.md  rubric.yaml
templates/technical-paper/artifacts/: example-technical-doc.md
tests/: test_evaluate.py
